a temp fix to comments not wrapping

--- a/app/assets/stylesheets/post.css.scss
+++ b/app/assets/stylesheets/post.css.scss
@@ -163,6 +163,8 @@
 
 
 .video-posts-row-1-col-2-body > div{
+    word-break: break-word;
+    width: 95%;
     height: auto;
     font-size: 14px;
 }
